force-app/main/default/objects/Service_Code_Mapping__mdt/Service_Code_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Service Code Mapping</label>
    <pluralLabel>Service Code Mappings</pluralLabel>
</CustomObject>