force-app/main/default/objects/Service_Code_Mapping__mdt/fields/Country_Type__c.field-meta.xml
<CustomField>
    <fullName>Country_Type__c</fullName>
    <label>Country Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>