force-app/main/default/objects/Service_Code_Mapping__mdt/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <label>Service Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>